# blackscholes

./: .gitignore  Makefile  README.md  index.html
.github/workflows/: deploy.yml
assets/: __vite-browser-external-VHBqACP8.js  index-DdQVCAKD.js
back/: .clang-format  CMakeLists.txt
back/src/: bindings.cpp  blackscholes.cpp
front/: index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.svelte  app.css
front/src/lib/: Heatmap.svelte  ValueCard.svelte  blackscholes.js  wasm.ts
front/src/lib/wasm/: blackscholes.js  blackscholes.wasm
front/src/wasm/: blackscholes.js  blackscholes.wasm
